<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Cody Huzarski (chuzarski.net)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
-->

<resources>

    <!-- Setting category strings -->
    <string name="setting_category_posts">Articles</string>

    <!-- Setting strings -->
    <string name="setting_post_limit">Articles per fetch</string>
    <string name="setting_default_channel">Default News Channel</string>
    <string name="setting_default_sort">Default sort</string>

    <!-- ActionBar and Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_set_source">Channel</string>

    <!-- Activity Strings -->
    <string name="title_activity_article_view">ArticleViewActivity</string>
    <string name="settings_title">Settings</string>

    <!-- Misc -->
    <string name="app_name">Crowdsource</string>
    <string name="select_filter">Select filter</string>
    <string name="software_licenses_string">Software Licenses</string>
</resources>
