<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Cody Huzarski (chuzarski.net)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_category_posts">
        <EditTextPreference
            android:id="@+id/setting_post_limit"
            android:key="setting_post_limit"
            android:defaultValue="20"
            android:title="@string/setting_post_limit"
            android:persistent="true"
            android:inputType="number"/>
        <ListPreference
            android:key="setting_news_channel"
            android:defaultValue="0"
            android:persistent="true"
            android:title="@string/setting_default_channel"/>
        <ListPreference
            android:key="setting_default_sort"
            android:defaultValue="1"
            android:persistent="true"
            android:title="@string/setting_default_sort"/>
    </PreferenceCategory>

</PreferenceScreen>